Fix 'important' elements spacing

--- a/tool/src/main/webapp/source/components/contentPanel/_contentPanel.scss
+++ b/tool/src/main/webapp/source/components/contentPanel/_contentPanel.scss
@@ -64,8 +64,7 @@
 	.element-wrapper.important {
 		border: 1px solid $border-color-important-element;
 		border-width: 1px 1px 1px 8px;
-		padding-left: 4px;
-		padding-right: 4px;
+		padding: 6px;
 		margin-bottom: 10px;
 	}
 
